--- a/Restaurant_Website/templates/home.html
+++ b/Restaurant_Website/templates/home.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./menu.html">Menu</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li><a href="../../CV/CV.html">CV</a></li>
+                <li><a href="../../index.html">Main Page</a></li>
             </ul>
         </nav>
     </header>
